makefile fix, header deps set

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,49 +1,41 @@
 CC:=gcc
 CFLAGS:=-Wall -Werror -Wextra -std=c11
+
 CAT_PATH:=./cat
 GREP_PATH:=./grep
 CAT:=s21_cat
 GREP:=s21_grep
+
 LDFLAGS:=-lm
-CPPFLAGS:=-MMD -MP
 ASAN:=-fsanitize=address -g
 
 SRCS_CAT:=$(shell find $(CAT_PATH) -name "*.c")
 OBJS_CAT:=$(SRCS_CAT:%.c=%.o)
+SRCS_CAT_H:=$(shell find $(CAT_PATH) -name "*.h")
 
 SRCS_GREP:=$(shell find $(GREP_PATH) -name "*.c")
 OBJS_GREP:=$(SRCS_GREP:%.c=%.o)
+SRCS_GREP_H:=$(shell find $(GREP_PATH) -name "*.h")
 
 all: $(CAT) $(GREP)
 
-$(CAT): $(OBJS_CAT)
+$(CAT): $(OBJS_CAT) $(SRCS_CAT_H)
 	$(CC) $(OBJS_CAT) $(CFLAGS) -o $@ $(LDFLAGS)
 	
-$(CAT_PATH)/%.o: %.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(ASAN) -c $< -o $@
+$(CAT_PATH)/%.o: %.c $(SRCS_CAT_H)
+	$(CC) $(CFLAGS) $(ASAN) -c $< -o $@
 
-$(GREP): $(OBJS_GREP)
+$(GREP): $(OBJS_GREP) $(SRCS_GREP_H)
 	$(CC) $(OBJS_GREP) $(CFLAGS) -o $@ $(LDFLAGS)
 
-$(GREP_PATH)/%.o: %.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(ASAN) -c $< -o $@
+$(GREP_PATH)/%.o: %.c $(SRCS_GREP_H)
+	$(CC) $(CFLAGS) $(ASAN) -c $< -o $@
 
-.PHONY: clean
-
-fclean:
-	rm $(OBJS_GREP)
-	rm $(GREP_PATH)/*.d
-	rm $(GREP)
-	rm $(OBJS_CAT)
-	rm $(CAT_PATH)/*.d
-	rm $(CAT)
 
 clean:
-	rm $(OBJS_GREP)
-	rm $(GREP_PATH)/*.d
-	rm $(OBJS_CAT)
-	rm $(CAT_PATH)/*.d
+	rm $(OBJS_CAT) $(CAT)
+	rm $(OBJS_GREP) $(GREP)
 
 rebuild: clean all
 
--include $(DEPS)
+.PHONY: clean
